--- a/index.html
+++ b/index.html
@@ -71,28 +71,29 @@
 			</div>
 			<!-- life score -->
 			<div class="flex justify-between w-3/4">
-				<button class="btn rounded-full bg-purple-300 px-4">
+				<button class="btn rounded-full bg-purple-400 px-4">
 					life
 					<img src="./images/Group 23.svg" alt="">
-					<span>1</span>
+					<span id="current-life">5</span>
 				  </button>
 				<button class="btn  rounded-full bg-purple-700 px-4">
 					score
 				<img src="./images/monetization_on.svg" alt="">
-				<span>1</span>
+				<span id="current-score">0</span>
 				  </button>
 			</div>
 		  </div>
 		</section>
 		<!-- play ground end -->
 		<!-- final score start -->
-		<section class="score flex justify-center items-center min-h-screen hidden">
+		<section id="final-score" class=" flex justify-center items-center min-h-screen hidden">
 	     <div class="text-white text-center space-y-8 bg-[#FFFFFF33] p-4 rounded-lg">
+			<h4 class="text-3xl">Game Over</h4>
 			<h1 class="text-8xl">
 				<span class="font-extrabold">Score:</span>
-				<span>14</span>
+				<span id="game-score">14</span>
 			</h1>
-			<button class="btn">Play Again</button>
+			<button onclick="play()" class="btn">Play Again</button>
 			<p>Practice will make you Pro</p>
 		 </div>
 		</section>
